# acerola-desktop

./: .acerola.code-workspace  README.md
acerola/src-tauri/: 2  Cargo.toml  TODO.md  tauri.conf.json
acerola/src-tauri/capabilities/: default.json
acerola/src-tauri/icons/: icon.icns
acerola/src-tauri/migrations/archive/: 001_create_chapter_template.sql  002_create_comic_directory.sql  003_create_chapter_archive.sql
acerola/src-tauri/migrations/models/archive/: 001_create_chapter_template.sql  002_create_comic_directory.sql  003_create_chapter_archive.sql
acerola/src-tauri/migrations/models/category/: 001_create_category.sql  002_create_manga_category.sql
acerola/src-tauri/migrations/models/history/: 001_create_reading_history.sql  002_create_chapter_read.sql
acerola/src-tauri/migrations/models/metadata/: 001_create_comic_metadata.sql  002_create_chapter_metadata.sql  003_create_chapter_page.sql
acerola/src-tauri/migrations/models/metadata/relationship/: 001_create_genre.sql  002_create_cover.sql  003_create_banner.sql  004_create_author.sql
acerola/src-tauri/migrations/models/metadata/source/: 001_create_anilist_source.sql  002_create_comic_info_source.sql  003_create_mangadex_source.sql
acerola/src-tauri/migrations/seeds/: 001_seed_chapter_template.sql
acerola/src-tauri/migrations/views/: 001_create_comic_summary_view.sql
acerola/src-tauri/src/: lib.rs  main.rs
acerola/src-tauri/src/cmd/events/: mod.rs
acerola/src-tauri/src/cmd/events/network/: mod.rs  network_status_payload.rs
acerola/src-tauri/src/cmd/events/shared/: error_payload.rs
acerola/src-tauri/src/cmd/events/summary/: comic_summary_payload.rs  mod.rs
acerola/src-tauri/src/cmd/features/: mod.rs
acerola/src-tauri/src/cmd/features/home/: comic_summary_cmd.rs
acerola/src-tauri/src/cmd/features/network/: mod.rs  network_cmd.rs
acerola/src-tauri/src/cmd/features/summary/: comic_summary_cmd.rs  mod.rs
acerola/src-tauri/src/commands/: library.rs  mod.rs
acerola/src-tauri/src/commands/events/: mod.rs
acerola/src-tauri/src/commands/events/shared/: scanner_event.rs
acerola/src-tauri/src/commands/features/: mod.rs
acerola/src-tauri/src/core/: mod.rs
acerola/src-tauri/src/core/connection/: mod.rs
acerola/src-tauri/src/core/services/: chapter_scanner_engine.rs  comic_scanner_engine.rs  comic_summary_engine.rs  mod.rs
acerola/src-tauri/src/core/services/archive/: mod.rs  (+4 more)
acerola/src-tauri/src/data/: mod.rs
acerola/src-tauri/src/data/models/: mod.rs
acerola/src-tauri/src/data/remote/: iroh_transport.rs  mod.rs
acerola/src-tauri/src/data/repositories/: base.rs  mod.rs
acerola/src-tauri/src/infra/: mod.rs
acerola/src-tauri/src/infra/db/: migrations.rs  mod.rs
acerola/src-tauri/src/infra/error/: comic.rs  db.rs  mod.rs  rpc.rs
acerola/src-tauri/src/infra/filesystem/: files_guard.rs  mod.rs  path_guard.rs  scanner_engine.rs
acerola/src-tauri/src/infra/pattern/: archive_format.rs  chapter_template.rs  mod.rs  template_validator.rs
acerola/src-tauri/src/infra/remote/: mod.rs  types.rs
acerola/src-tauri/src/server/: mod.rs
acerola/src-tauri/src/tests/: mod.rs
acerola/src-tauri/src/tests/utils/: mock_transport.rs  setup_test_db.rs
(+275 files in other folders)
