[package]
name = "acerola"
edition = "2021"
version = "0.0.1-beta"
license = "GPL-3.0-only"
authors = ["Vinícius Gabriel Pereira Leitão"]
description = "Um app de organização, leitura de quadrinhos em cbz e cbr"

# NOTE: Em rust para baixar libs cargo build
[lib]
# WARN: Sufixo _lib é para não dar conflito de binário
name = "acerola_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.18.2"
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["full"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = "0.8.6"
thiserror = "2.0.18"
tauri-plugin-log = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
